--- a/package.json
+++ b/package.json
@@ -29,5 +29,9 @@
 		"typescript": "^4.9.3",
 		"vite": "^4.0.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@types/google.accounts": "^0.0.5",
+		"jwt-decode": "^3.1.2"
+	}
 }
